2007-03-30  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5248: IRRE - Element browser cannot be used on new child records of a new parent record

2007-03-30  Franz Holzinger  <kontakt@fholzinger.com>

	* Fixed bug #4725: Add parameter $allVer to function call of searchExtensionsXML in order to fetch the extension data also for older versions of an extension.

2007-03-28  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5288: Missing parameter in recursion of t3lib_div::array_merge_recursive_overrule (thanks to Simon Tuck)
	* Fixed bug #5177: RTEhtmlarea not correctly displayed in IRRE child form-fields and tabs

2007-03-28  Ingmar Schlecht  <ingmar@typo3.org>

	* Adding page tree backwards compatibility for JavaScript function hilight_row() to tree.js (by Benjamin Mack)

2007-03-28  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #5266: WamCom browser check in htmlarea.js conflicted with Firefox 2.0.0.3

2007-03-28  Ernesto Baschny  <ernst@cron-it.de>

	* Added +stdWrap for the .src parameter of "FRAME"

2007-03-27  Dmitry Dulepov  <dmitry@typo3.org>

	* Added hook to class.t3lib_userauthgroup.php, function recordEditAccessInternals

2007-03-23  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #5269: wsol_preview.php does not scroll to content element
	* Fixed bug #4953: Preview in Workspaces Module for content elements

2007-03-22  Karsten Dambekalns  <karsten@typo3.org>

	* typo3/sysext/adodb: Update to upstream version 4.94.

2007-03-12  Michael Stucki  <michael@typo3.org>

	* Change copyright information in typo3/index.php (no real change, just replace the hardcoded years with the "TYPO3_copyright_year" constant)

2007-03-12  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Replace all TINYTEXT columns with VARCHAR(255)
	* Change index "parent" of fe_user to (pid,username) and drop the index "pid"
	* Quote table names in admin_get_XXX() functions of t3lib_db

2007-03-06  Michael Stucki  <michael@typo3.org>
